--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ body {
     text-align:center;
    }
 
+section {
+    width: 100%;
+}
+
 .bg-dark {
     background-color: transparent !important;
 }
