--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@ body {
   color: #fff;
 }
 
+   #pageheader {
+    font-family: 'Inter', sans-serif;
+   }
+
    #separator {
     position: relative;
     width: 100%;
@@ -93,6 +97,16 @@ body {
       transform: rotate(-45deg) translate(-20px, 20px);
       opacity: 0;
     }
+  }
+
+  #topborder {
+    width: 100%;
+    height: 100%;
+    position: relative;
+  }
+
+  #topcontainer {
+    padding-top: 50px;
   }
   
   
