--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ section, div {
 
 .scroll { 
   font-family: 'Roboto Mono', monospace;
+  font-size: large;
   color: #fff;
 }
 
@@ -163,7 +164,6 @@ section, div {
     -webkit-transform: translate(0, -50%);
     transform: translate(0, -50%);
     color: #fff;
-    font : normal 400 20px/1 'Josefin Sans', sans-serif;
     letter-spacing: .1em;
     text-decoration: none;
     transition: opacity .3s;
