--- a/style.css
+++ b/style.css
@@ -32,6 +32,14 @@ section, div {
   color: #fff;
 }
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  top: 10%;
+  position: relative;
+}
+
    #pageheader {
     font-family: 'Inter', sans-serif;
    }
@@ -134,11 +142,11 @@ section, div {
   #topcontainer {
     padding-top: 50px;
   }
+
+#topsection{
+  background-image: url(images/about-me-wallpaper.png)!important;
   
-  
-
-
-
+}
 
 
 #topsection a {
@@ -189,7 +197,7 @@ section, div {
 
   /* ALL TYPEWRITER EFFECTS FOUND BELOW */
 
-  .line1{
+  /* .line1{
     position: relative;
     top: 50%;  
     width: 24em;
@@ -200,18 +208,18 @@ section, div {
     white-space: nowrap;
     overflow: hidden;
     transform: translateY(-50%);    
-}
+} */
 
 /* Animation */
-.anim-typewriter{
+/* .anim-typewriter{
   animation: typewriter 4s steps(44) 1s 1 normal both,
              blinkTextCursor 500ms steps(44) infinite normal;
-}
-@keyframes typewriter{
+} */
+/* @keyframes typewriter{
   from{width: 0;}
   to{width: 24em;}
 }
 @keyframes blinkTextCursor{
   from{border-right-color: rgba(255, 255, 255, 0.75);}
   to{border-right-color: transparent;}
-}
+} */
