--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ section, div {
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
-  width: 600px;
+  max-width: 600px;
   padding: 30px;
   background-color: #fff;
   color: #000000;
@@ -282,4 +282,10 @@ section, div {
 #currentproject {
   background-image: url("images/cuddlebug-background.png");
   background-size: cover;
+}
+
+@media only screen and (max-width: 500px) {
+  #scroll {
+      display: none;
+  }
 }
