--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ section, div {
     height: 100px;
     color: #fff;
     width: 1000px;
-    top: 85%;
+    top: 80%;
     left: 50%;
     margin-left: -500px;
     display: block;
@@ -271,7 +271,7 @@ section, div {
 }
 
 @media only screen and (max-width: 500px) {
-  #scroll {
+  #scrollp {
       display: none;
   }
   #name {
@@ -299,5 +299,12 @@ section, div {
     width: 150px;   
     float: none;
     margin: auto;
+  }
+
+  .carousel-control-next{
+    display: none;
+  }
+  .carousel-control-prev{
+    display: none;
   }
 }
