--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@ section, div {
     color: #fff;
     letter-spacing: .1em;
     text-decoration: none;
-    transition: opacity .3s;
+    /* transition: opacity .3s; */
   }
   .scroll a:hover {
     opacity: .5;
@@ -271,9 +271,9 @@ section, div {
 }
 
 @media only screen and (max-width: 580px) {
-  #scrollp {
+  /* #scrollp {
       display: none;
-  }
+  } */
 
   #scroll {
     top: 70%;
