--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ section, div {
   margin-right: auto;
   top: 10%;
   position: relative;
+  font-family: 'Tenor Sans', sans-serif;
 }
 
 #aboutme, #languages, #tools, #cuddlebug {
@@ -321,4 +322,55 @@ section, div {
   #cimage1, #cimage2{
     margin-top: 50%;
   }
+}
+
+/* bubble code */
+
+.bubble-container{
+  
+  position: relative;
+  align-items: center;
+  height:95%;
+  width:95%;
+  overflow:hidden;
+  border-radius:5px;
+  margin:0 auto;
+  margin-bottom: 20px;
+}
+
+
+.bubble-expand {
+  width:250px;
+  height:250px;
+  background-color: #607e7e;
+  border-radius:500px;
+  position: absolute;
+  cursor:pointer;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: all 0.3s;
+}
+
+.bubble-expand:hover {
+  transform: translate(-50%, -50%) scale(1.3);
+  overflow: hidden;
+  }
+
+    
+.bubble-expand-clicked{
+  width:75%;
+  height:75%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  align-items: stretch;
+  overflow: hidden;
+}
+.bubble-expand-clicked p, img{
+  visibility: visible!important;
+  align-items: center;
+}
+.bubble-expand-clicked i{
+  visibility: hidden!important;
 }
