bubble expand formated for large screens (text disappears on small screens)

--- a/style.css
+++ b/style.css
@@ -371,3 +371,6 @@ section, div {
   visibility: visible!important;
   align-items: center;
 }
+.bubble-expand-clicked #plus{
+  visibility: hidden!important;
+}
